--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "modulo 1 calificable",
   "main": "(index.html)",
   "scripts": {
-     "dev": "lite-server",
-     "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "lite-server",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,10 @@
   "homepage": "https://bitbucket.org/JEPB1/modulo1#readme",
   "devDependencies": {
     "lite-server": "^2.6.1"
+  },
+  "dependencies": {
+    "boostrap": "^2.0.0",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1"
   }
 }
